feat(cache): add basic caching

--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ configurations {
     }
 }
 
-compileJava {
-    options.compilerArgs << '-parameters'
-}
+//compileJava {
+//    options.compilerArgs << '-parameters'
+//}
 
 repositories {
     mavenCentral()
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'com.auth0:java-jwt:3.8.3'
 
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
