--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ configurations {
     }
 }
 
+java {
+    sourceCompatibility = JavaVersion.toVersion('8')
+    targetCompatibility = JavaVersion.toVersion('8')
+}
+
 //compileJava {
 //    options.compilerArgs << '-parameters'
 //}
